package printscript.common

data class Position(val line: Int, val column: Int)
