package printscript.common

enum class TokenType {
    LET,
    IDENTIFIER,
    PRINTLN,
    NUMBERTYPE,
    NUMBERLITERAL,
    STRINGLITERAL,
    STRINGTYPE,
    PLUS,
    MINUS,
    MULTIPLY,
    DIVIDE,
    ASSIGN,
    COLON,
    SEMICOLON,
    LEFTPAREN,
    RIGHTPAREN,
    CONST,
    BOOLEANTYPE,
    BOOLEANLITERAL,
    IF,
    ELSE,
    LEFTBRACE,
    RIGHTBRACE,
    READINPUT,
    READENV,
    EOF,
}
